<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

  <LinearLayout
      android:orientation="vertical"
      android:layout_height="wrap_content"
      android:layout_width="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:text="@string/select_your_country"
        android:layout_marginStart="20dp" />
    <Spinner
        android:id="@+id/countrylist"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginLeft="20dp"
        android:spinnerMode="dropdown"
        android:layout_marginRight="20dp"
        android:background="@drawable/main_spinner"
        android:layout_marginStart="20dp" />


  </LinearLayout>
  <TextView
      android:id="@+id/tv"
      android:layout_margin="20dp"
      android:textSize="40sp"
      android:textColor="#000000"

      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/selected_country"/>
  <TextView
      android:layout_margin="20dp"
      android:textSize="15sp"
      android:textColor="#000000"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"

      android:text="@string/latest_update"/>

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="172dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirmed_cases"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        />
    <TextView
        android:text="TextView"
        android:textColor="#000000"
        android:id="@+id/Description_Confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_below="@id/textView"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/active_cases"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:layout_toRightOf="@id/textView"
        android:layout_marginStart="60dp" />

    <TextView
        android:text="TextView"
        android:textColor="#000000"
        android:id="@+id/Description_active"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_below="@id/textView2"
        android:layout_toRightOf="@id/textView"
        android:layout_marginStart="60dp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/death_count"
        android:layout_below="@id/textView"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="40dp"
        android:layout_marginStart="40dp" />

    <TextView
        android:text="TextView"
        android:textColor="#000000"
        android:id="@+id/Description_Death"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="40dp"
        android:layout_marginTop="0dp"
        android:layout_below="@id/textView3"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recovered_cases"
        android:layout_below="@id/textView2"
        android:layout_toRightOf="@id/textView3"
        android:layout_marginLeft="90dp"
        android:layout_marginTop="40dp"
        android:layout_toEndOf="@id/textView3"
        android:layout_marginStart="90dp" />

    <TextView
        android:text="TextView"
        android:id="@+id/Description_Recovered"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="90dp"
        android:layout_below="@id/textView4"
        android:textColor="#000000"
        android:layout_toRightOf="@id/textView3"
        android:layout_marginStart="90dp" />
  </RelativeLayout>
</LinearLayout>